deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: b-ext-deploy
  labels:
    app: b-ext
spec:
  selector:
    matchLabels:
      app: b-ext
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: b-ext
        tier: frontend
    spec:
      containers:
      - image: nginx
        name: b-ext-wp
        ports:
        - containerPort: 80
          name: b-ext-cont
        volumeMounts:
        - name: b-ext-pv
          mountPath: /var/www/html
      volumes:
      - name: b-ext-pv
        persistentVolumeClaim:
          claimName: b-ext-pvc
