ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: b-ext-ing
spec:
  rules:
  - host: sadhana.cicd.kops.bsh-ac.cloud
    http:
      paths:
      - path: /        
        backend:
          serviceName: b-ext-svc
          servicePort: 80
